# value-with-error

./: AUTHORS  CMakeLists.txt  README.md  build.txt  run-tests-mingw.sh  run-tests-win.bat  run-tests.sh  todo.txt
doc/: Doxyfile
examples/: a.out  ex1.cpp
src/: DetailValueWithError.hpp  ValueWithErrorComparisonPolicy.hpp  fwd.hpp
src/cpp11/: ValueWithError.hpp
src/cpp98/: ValueWithError.hpp
tests/: PolicyMock.hpp  Test_CompareWithinErrorIntervalsPolicy.cpp  Test_ComparisonOperatorsUsingPolicy.cpp  Test_ExactValueAndIgnoreErrorPolicy.cpp  Test_ValueWithError.cpp  Test_ValueWithError_Eigen.cpp  Test_ValueWithError_Policy.cpp  Test_ValueWithError_Policy_cpp11.cpp  Test_ValueWithError_Policy_make_value_cpp11.cpp  Test_ValueWithError_Policy_make_value_cpp98.cpp  Test_ValueWithError_cpp11.cpp  Test_ValueWithError_cpp98.cpp  Test_ValueWithError_math_overloads.cpp  Test_ValueWithError_math_overloads_cpp11.cpp  Test_ValueWithError_multiprecision.cpp  Test_ValueWithError_valarray.cpp  common.cpp  common.hpp  precompiled.hpp
